<resources>
    <string name="app_name">Contact List</string>

    <!-- Hints -->
    <string name="enter_first_name">First Name</string>
    <string name="enter_last_name">Last Name</string>
    <string name="enter_phone">Phone</string>
    <string name="enter_email">Email</string>
    <string name="enter_address">Address</string>

    <!-- Card -->
    <string name="first_name_text">First Name</string>
    <string name="last_name_text">Last Name</string>
    <string name="phone_text">Phone</string>
    <string name="email_text">Email</string>
    <string name="address_text">Address</string>

    <!-- Menu -->
    <string name="add_contact">Add Contact</string>
    <string name="find_contact">Find Contact</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="sort_z_a">Sort Z-A</string>

    <string name="trashcan_descrip">trashcan icon</string>

</resources>